# stuv2ical

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
src/: api.rs  icalendar.rs  main.rs
