[package]
name = "stuv2ical"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
getset = "0.1.1"

[dependencies.actix-rt]
version = "2.6.0"

[dependencies.awc]
version = "3.0.0-beta.20"
features = ["rustls"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.clap]
version = "~3.0.0-beta"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.13.0"
features = ["full"]
